<resources>
    <string name="MSG_APPS">MSG_APPS</string>
    <string name="MSG_APPS_NOTIFY">MSG_APPS_NOTIFY</string>
    <string name="MSG_APPS_TEST">MSG_APPS_TEST</string>
    <string name="MSG_CALL">MSG_CALL</string>
    <string name="MSG_CALL_RINGING">MSG_CALL_RINGING</string>
    <string name="MSG_CALL_TEST">MSG_CALL_TEST</string>
    <string name="MSG_CHIME">MSG_CHIME</string>
    <string name="MSG_CHIME_FIRE">MSG_CHIME_FIRE</string>
    <string name="MSG_CHIME_TEST">MSG_CHIME_TEST</string>
    <string name="MSG_EXTRAINT1">MSG_EXTRAINT1</string>
    <string name="MSG_EXTRAINT2">MSG_EXTRAINT2</string>
    <string name="MSG_EXTRATEXT1">MSG_EXTRATEXT1</string>
    <string name="MSG_EXTRATEXT2">MSG_EXTRATEXT2</string>
    <string name="MSG_MN_ACTIVITYAPPFILTERS_START">MSG_APPS_ACTIVITYAPPFILTERS_START</string>
    <string name="MSG_MN_ACTIVITYMAIN">MSG_MN_ACTIVITYMAIN</string>
    <string name="MSG_MN_ACTIVITYRECENTNOTIFICATIONS_START">MSG_APPS_ACTIVITYRECENTNOTIFICATIONS_START</string>
    <string name="MSG_MN_ACTIVITYREMINDERS_START">MSG_MN_ACTIVITYREMINDERS_START</string>
    <string name="MSG_MN_STOP">MSG_MN_STOP</string>
    <string name="MSG_MN_TEST">MSG_MN_TEST</string>
    <string name="MSG_REMINDERS">MSG_REMINDERS</string>
    <string name="MSG_REMINDERS_ALL_TEST">MSG_REMINDERS_ALL_TEST</string>
    <string name="MSG_REMINDERS_FIRE">MSG_REMINDERS_FIRE</string>
    <string name="MSG_REMINDERS_ONE_TEST">MSG_REMINDERS_ONE_TEST</string>
    <string name="MSG_SMS">MSG_SMS</string>
    <string name="MSG_SMS_NEWMMS">MSG_SMS_NEWMMS</string>
    <string name="MSG_SMS_NEWSMS">MSG_SMS_NEWSMS</string>
    <string name="MSG_SMS_TEST">MSG_SMS_TEST</string>
    <string name="MSG_SYSTEM">MSG_SYSTEM</string>
    <string name="MSG_SYSTEM_BATTERY_LOW">MSG_SYSTEM_BATTERY_LOW</string>
    <string name="MSG_SYSTEM_BATTERY_OK">MSG_SYSTEM_BATTERY_OK</string>
    <string name="MSG_SYSTEM_BOOT">MSG_SYSTEM_BOOT</string>
    <string name="MSG_SYSTEM_POWER_CONNECTED">MSG_SYSTEM_POWER_CONNECTED</string>
    <string name="MSG_SYSTEM_POWER_DISCONNECTED">MSG_SYSTEM_POWER_DISCONNECTED</string>
    <string name="MSG_SYSTEM_TEST">MSG_SYSTEM_TEST</string>
    <string name="MSG_SYSTEM_WF_CONNECTED">MSG_SYSTEM_WF_CONNECTED</string>
    <string name="MSG_SYSTEM_WF_DISCONNECTED">MSG_SYSTEM_WF_DISCONNECTED</string>
    <string name="MSG_WHAT">MSG_WHAT</string>
    <string name="action_about">About…</string>
    <string name="action_addfilter">Add filter</string>
    <string name="action_addreminder">Add reminder</string>
    <string name="action_advanced">Advanced…</string>
    <string name="action_checkrecent">Recent not/tions</string>
    <string name="action_clear">Clear</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_editfilters">Edit filters</string>
    <string name="action_instructions">User guide…</string>
    <string name="action_no">No</string>
    <string name="action_ok">OK</string>
    <string name="action_rate">Rate this app…</string>
    <string name="action_settings">Settings…</string>
    <string name="action_test">Test</string>
    <string name="action_yes">Yes</string>
    <string name="activity_appfilter_criteria">CRITERIA</string>
    <string name="activity_appfilter_criteria_category">Category</string>
    <string name="activity_appfilter_criteria_contains">Announce notifications from the app(s) selected above, if they contain:</string>
    <string name="activity_appfilter_criteria_containsnot">… AND they do not contain:</string>
    <string name="activity_appfilter_criteria_hint">Case is not significant. Use OR to separate multiple keywords. e.g. message OR sms OR email</string>
    <string name="activity_appfilter_criteria_id">ID</string>
    <string name="activity_appfilter_criteriaadv">ADVANCED CRITERIA</string>
    <string name="activity_appfilter_criteriaadv_text">Hint: Leave the advanced criteria fields above blank unless you know what you are doing.</string>
    <string name="activity_appfilter_filter">Filter</string>
    <string name="activity_appfilter_how">ANNOUNCEMENT</string>
    <string name="activity_appfilter_sayafter">Say after</string>
    <string name="activity_appfilter_saybefore">Say before</string>
    <string name="activity_appfilter_saytext">Text</string>
    <string name="activity_appfilter_sayticker">Ticker</string>
    <string name="activity_appfilter_saytitle">Title</string>
    <string name="activity_appfilter_what">APP SELECTION</string>
    <string name="activity_appfilter_what_text">Announce notification from:</string>
    <string name="activity_reminder_dow0">Sun</string>
    <string name="activity_reminder_dow1">Mon</string>
    <string name="activity_reminder_dow2">Tue</string>
    <string name="activity_reminder_dow3">Wed</string>
    <string name="activity_reminder_dow4">Thu</string>
    <string name="activity_reminder_dow5">Fri</string>
    <string name="activity_reminder_dow6">Sat</string>
    <string name="app_name">Morse Notifier</string>
    <string name="app_name_mnfree">Morse Notifier Free</string>
    <string name="app_name_mnpro">Morse Notifier Pro</string>
    <string name="app_name_vnfree">Voice Notifier Free</string>
    <string name="app_name_vnpro">Voice Notifier Pro</string>
    <string name="pref_app_enable">Enable</string>
    <string name="pref_call_enable">Enable</string>
    <string name="pref_call_enable_summary">Enable announcement of incoming calls</string>
    <string name="pref_chime_enable_summary">Enable hourly chime</string>
    <string name="pref_chime_enable_title">Enable</string>
    <string name="pref_chime_hourenable_00_title">00:00</string>
    <string name="pref_chime_hourenable_01_title">01:00</string>
    <string name="pref_chime_hourenable_02_title">02:00</string>
    <string name="pref_chime_hourenable_03_title">03:00</string>
    <string name="pref_chime_hourenable_04_title">04:00</string>
    <string name="pref_chime_hourenable_05_title">05:00</string>
    <string name="pref_chime_hourenable_06_title">06:00</string>
    <string name="pref_chime_hourenable_07_title">07:00</string>
    <string name="pref_chime_hourenable_08_title">08:00</string>
    <string name="pref_chime_hourenable_09_title">09:00</string>
    <string name="pref_chime_hourenable_10_title">10:00</string>
    <string name="pref_chime_hourenable_11_title">11:00</string>
    <string name="pref_chime_hourenable_12_title">12:00</string>
    <string name="pref_chime_hourenable_13_title">13:00</string>
    <string name="pref_chime_hourenable_14_title">14:00</string>
    <string name="pref_chime_hourenable_15_title">15:00</string>
    <string name="pref_chime_hourenable_16_title">16:00</string>
    <string name="pref_chime_hourenable_17_title">17:00</string>
    <string name="pref_chime_hourenable_18_title">18:00</string>
    <string name="pref_chime_hourenable_19_title">19:00</string>
    <string name="pref_chime_hourenable_20_title">20:00</string>
    <string name="pref_chime_hourenable_21_title">21:00</string>
    <string name="pref_chime_hourenable_22_title">22:00</string>
    <string name="pref_chime_hourenable_23_title">23:00</string>
    <string name="pref_chime_hourenable_summary">Select which individual hours to announce</string>
    <string name="pref_chime_hourenable_title">Hours to announce</string>
    <string name="pref_chime_timehow_summary">Select how to announce time</string>
    <string name="pref_chime_timehow_title">Time format</string>
    <string name="pref_contactdisplayname">Contact display name</string>
    <string name="pref_contactdisplayname_summary">Contact name, as displayed in the contacts list.</string>
    <string name="pref_contactfirstname">Contact first name</string>
    <string name="pref_contactfirstname_summary">Ad the first (given) name, if defined in the contacts list</string>
    <string name="pref_contactinitials">Contact initials</string>
    <string name="pref_contactinitials_summary">Initials if defined in the contacts list</string>
    <string name="pref_contactlastname">Contact last name</string>
    <string name="pref_contactlastname_summary">Add the last (family) name, if defined in the contacts list</string>
    <string name="pref_contactname_none">No contact string</string>
    <string name="pref_contactname_none_summary">Text to play when the number is not in the contacts list.</string>
    <string name="pref_contactnickname">Contact nickname</string>
    <string name="pref_contactnickname_summary">Nickname, if defined in the contacts list</string>
    <string name="pref_display_color">Message color</string>
    <string name="pref_display_color_me_highlight">Highlighted Morse color</string>
    <string name="pref_display_color_me_highlight_summary">Select the color of the highlighted (currently playing) dots and dashes</string>
    <string name="pref_display_color_summary">Select the color of the scrolling dots, dashes and text</string>
    <string name="pref_display_color_text_highlight">Highlighted color</string>
    <string name="pref_display_color_text_highlight_summary">Select the color of the highlighted text</string>
    <string name="pref_display_enable">Scrolling message</string>
    <string name="pref_display_enable_summary">Show window with scrolling message</string>
    <string name="pref_display_flash">Flash message</string>
    <string name="pref_display_flash_summary">Flash background with morse code</string>
    <string name="pref_display_how">Display method</string>
    <string name="pref_display_how_summary">Use the drop-down list to select display options. Please note that on some smartphones some methods might work better than others.</string>
    <string name="pref_display_pos">Position</string>
    <string name="pref_display_pos_summary">Select the position of the scrolling message with respect to the screen</string>
    <string name="pref_display_stayontop">Stay on top</string>
    <string name="pref_display_stayontop_summary">"Prevent other apps from stealing focus while the scrolling is displayed. On some smartphones this might be necessary in order for the scrolling message to stay visible, above the smartphone's normal ringing screen. Enable only if necessary."</string>
    <string name="pref_display_text">Show text</string>
    <string name="pref_display_text_summary">Check to show text above morse code</string>
    <string name="pref_num">"Caller's number"</string>
    <string name="pref_num_none">Hidden number text</string>
    <string name="pref_num_none_summary">Text to play when there is no caller id (number is hidden).</string>
    <string name="pref_num_summary">"Select when and how to include the caller's telephone number."</string>
    <string name="pref_repeat">Repeat</string>
    <string name="pref_repeat_summary">Number of times to repeat the announcement. Please note that longer broadcasts might cause a slight delay before playback on some older phones.</string>
    <string name="pref_settings_call">Call notifications</string>
    <string name="pref_settings_chime">Hourly chime</string>
    <string name="pref_settings_display">Display settings</string>
    <string name="pref_settings_sms">SMS/MMS notifications</string>
    <string name="pref_sms_enable">Enable</string>
    <string name="pref_sms_enable_summary">Enable announcement of incoming SMS and MMS messages</string>
    <string name="pref_smstext">SMS text</string>
    <string name="pref_smstext_summary">Include the whole SMS message in the notification announcement.</string>
    <string name="pref_stream_summary">Select the audio channel to be used for announcements.</string>
    <string name="pref_stream_title">Output audio stream</string>
    <string name="pref_string1">Preceding text</string>
    <string name="pref_string1_summary">Text to begin an announcement.</string>
    <string name="pref_string2">Ending text</string>
    <string name="pref_string2_summary">Text to end an announcement.</string>
</resources>