<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/pref_settings_sms" android:key="pref_sms"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:mypreferencenamespace="http://mypreferencenamespace.100dof.com">
    <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_sms_enable" android:key="pref_sms_enable" android:summary="@string/pref_sms_enable_summary" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
    <com.dof100.morsenotifier.MyPreferenceEditText android:title="@string/pref_string1" android:key="pref_sms_string1" android:summary="@string/pref_string1_summary" android:dependency="pref_sms_enable" android:inputType="textCapSentences" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" mypreferencenamespace:valueShow="true" mypreferencenamespace:valueUnits="" />
    <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_contactdisplayname" android:key="pref_sms_contactdisplayname" android:summary="@string/pref_contactdisplayname_summary" android:dependency="pref_sms_enable" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
    <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_contactfirstname" android:key="pref_sms_contactfirstname" android:summary="@string/pref_contactfirstname_summary" android:dependency="pref_sms_enable" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
    <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_contactlastname" android:key="pref_sms_contactlastname" android:summary="@string/pref_contactlastname_summary" android:dependency="pref_sms_enable" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
    <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_contactinitials" android:key="pref_sms_contactinitials" android:summary="@string/pref_contactinitials_summary" android:dependency="pref_sms_enable" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
    <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_contactnickname" android:key="pref_sms_contactnickname" android:summary="@string/pref_contactnickname_summary" android:dependency="pref_sms_enable" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
    <com.dof100.morsenotifier.MyPreferenceEditText android:title="@string/pref_contactname_none" android:key="pref_sms_contactname_none" android:summary="@string/pref_contactname_none_summary" android:dependency="pref_sms_enable" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" mypreferencenamespace:valueShow="true" mypreferencenamespace:valueUnits="" />
    <com.dof100.morsenotifier.MyPreferenceList android:entries="@array/pref_num_items" android:title="@string/pref_num" android:key="pref_sms_num" android:summary="@string/pref_num_summary" android:dependency="pref_sms_enable" android:entryValues="@array/pref_num_values" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" mypreferencenamespace:valueShow="true" mypreferencenamespace:valueUnits="" />
    <com.dof100.morsenotifier.MyPreferenceEditText android:title="@string/pref_num_none" android:key="pref_sms_num_none" android:summary="@string/pref_num_none_summary" android:dependency="pref_sms_enable" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" mypreferencenamespace:valueShow="true" mypreferencenamespace:valueUnits="" />
    <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_smstext" android:key="pref_sms_text" android:summary="@string/pref_smstext_summary" android:dependency="pref_sms_enable" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
    <com.dof100.morsenotifier.MyPreferenceEditText android:title="@string/pref_string2" android:key="pref_sms_string2" android:summary="@string/pref_string2_summary" android:dependency="pref_sms_enable" android:inputType="textCapSentences" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" mypreferencenamespace:valueShow="true" mypreferencenamespace:valueUnits="" />
    <com.dof100.morsenotifier.MyPreferenceList android:entries="@array/pref_repeat_items" android:title="@string/pref_repeat" android:key="pref_sms_repeat" android:summary="@string/pref_repeat_summary" android:dependency="pref_sms_enable" android:entryValues="@array/pref_repeat_values" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" mypreferencenamespace:valueShow="true" mypreferencenamespace:valueUnits="" />
    <com.dof100.morsenotifier.MyPreferenceList android:entries="@array/pref_stream_items" android:title="@string/pref_stream_title" android:key="pref_sms_stream" android:summary="@string/pref_stream_summary" android:dependency="pref_sms_enable" android:entryValues="@array/pref_stream_values" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" mypreferencenamespace:valueShow="true" mypreferencenamespace:valueUnits="" />
    <com.dof100.morsenotifier.MyPreferenceButton android:key="pref_sms_test" android:dependency="pref_sms_enable" mypreferencenamespace:buttonCaption="@string/action_test" mypreferencenamespace:buttonIntentClass="com.dof100.morsenotifier.ServiceMain" mypreferencenamespace:buttonMsgExtraText1="1234567890" mypreferencenamespace:buttonMsgExtraText2="Hello, this is a test message!" mypreferencenamespace:buttonMsgWhat="@string/MSG_SMS_TEST" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
</PreferenceScreen>