<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/pref_settings_display" android:key="pref_display"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:mypreferencenamespace="http://mypreferencenamespace.100dof.com">
    <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_display_enable" android:key="pref_display_enable" android:summary="@string/pref_display_enable_summary" />
    <com.dof100.morsenotifier.MyPreferenceList android:entries="@array/pref_display_how_items" android:title="@string/pref_display_how" android:key="pref_display_how" android:summary="@string/pref_display_how_summary" android:dependency="pref_display_enable" android:entryValues="@array/pref_display_how_values" mypreferencenamespace:valueShow="true" mypreferencenamespace:valueUnits="" />
    <com.dof100.morsenotifier.MyPreferenceList android:entries="@array/pref_display_pos_items" android:title="@string/pref_display_pos" android:key="pref_display_pos" android:summary="@string/pref_display_pos_summary" android:dependency="pref_display_enable" android:entryValues="@array/pref_display_pos_values" mypreferencenamespace:valueShow="true" mypreferencenamespace:valueUnits="" />
    <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_display_stayontop" android:key="pref_display_stayontop" android:summary="@string/pref_display_stayontop_summary" android:dependency="pref_display_enable" />
    <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_display_text" android:key="pref_display_text" android:summary="@string/pref_display_text_summary" android:dependency="pref_display_enable" />
    <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_display_flash" android:key="pref_display_flash" android:summary="@string/pref_display_flash_summary" android:dependency="pref_display_enable" />
    <com.dof100.morsenotifier.MyPreferenceList android:entries="@array/pref_display_color_items" android:title="@string/pref_display_color" android:key="pref_display_color" android:summary="@string/pref_display_color_summary" android:dependency="pref_display_enable" android:entryValues="@array/pref_display_color_values" mypreferencenamespace:valueShow="true" mypreferencenamespace:valueUnits="" />
    <com.dof100.morsenotifier.MyPreferenceList android:entries="@array/pref_display_color_items" android:title="@string/pref_display_color_me_highlight" android:key="pref_display_color_me_highlight" android:summary="@string/pref_display_color_me_highlight_summary" android:dependency="pref_display_enable" android:entryValues="@array/pref_display_color_values" mypreferencenamespace:valueShow="true" mypreferencenamespace:valueUnits="" />
    <com.dof100.morsenotifier.MyPreferenceList android:entries="@array/pref_display_color_items" android:title="@string/pref_display_color_text_highlight" android:key="pref_display_color_text_highlight" android:summary="@string/pref_display_color_text_highlight_summary" android:dependency="pref_display_enable" android:entryValues="@array/pref_display_color_values" mypreferencenamespace:valueShow="true" mypreferencenamespace:valueUnits="" />
    <com.dof100.morsenotifier.MyPreferenceButton android:key="pref_display_test" mypreferencenamespace:buttonCaption="@string/action_test" mypreferencenamespace:buttonIntentClass="com.dof100.morsenotifier.ServiceMain" mypreferencenamespace:buttonMsgExtraText1="" mypreferencenamespace:buttonMsgExtraText2="" mypreferencenamespace:buttonMsgWhat="@string/MSG_MN_TEST" />
</PreferenceScreen>