<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/pref_settings_chime" android:key="pref_chime"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:mypreferencenamespace="http://mypreferencenamespace.100dof.com">
    <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_chime_enable_title" android:key="pref_chime_enable" android:summary="@string/pref_chime_enable_summary" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
    <PreferenceScreen android:title="@string/pref_chime_hourenable_title" android:key="pref_chime_hourenable" android:summary="@string/pref_chime_hourenable_summary" android:dependency="pref_chime_enable">
        <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_chime_hourenable_00_title" android:key="pref_chime_hourenable_00" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
        <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_chime_hourenable_01_title" android:key="pref_chime_hourenable_01" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
        <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_chime_hourenable_02_title" android:key="pref_chime_hourenable_02" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
        <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_chime_hourenable_03_title" android:key="pref_chime_hourenable_03" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
        <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_chime_hourenable_04_title" android:key="pref_chime_hourenable_04" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
        <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_chime_hourenable_05_title" android:key="pref_chime_hourenable_05" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
        <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_chime_hourenable_06_title" android:key="pref_chime_hourenable_06" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
        <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_chime_hourenable_07_title" android:key="pref_chime_hourenable_07" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
        <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_chime_hourenable_08_title" android:key="pref_chime_hourenable_08" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
        <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_chime_hourenable_09_title" android:key="pref_chime_hourenable_09" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
        <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_chime_hourenable_10_title" android:key="pref_chime_hourenable_10" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
        <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_chime_hourenable_11_title" android:key="pref_chime_hourenable_11" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
        <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_chime_hourenable_12_title" android:key="pref_chime_hourenable_12" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
        <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_chime_hourenable_13_title" android:key="pref_chime_hourenable_13" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
        <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_chime_hourenable_14_title" android:key="pref_chime_hourenable_14" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
        <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_chime_hourenable_15_title" android:key="pref_chime_hourenable_15" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
        <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_chime_hourenable_16_title" android:key="pref_chime_hourenable_16" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
        <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_chime_hourenable_17_title" android:key="pref_chime_hourenable_17" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
        <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_chime_hourenable_18_title" android:key="pref_chime_hourenable_18" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
        <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_chime_hourenable_19_title" android:key="pref_chime_hourenable_19" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
        <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_chime_hourenable_20_title" android:key="pref_chime_hourenable_20" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
        <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_chime_hourenable_21_title" android:key="pref_chime_hourenable_21" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
        <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_chime_hourenable_22_title" android:key="pref_chime_hourenable_22" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
        <com.dof100.morsenotifier.MyPreferenceCheckbox android:title="@string/pref_chime_hourenable_23_title" android:key="pref_chime_hourenable_23" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
    </PreferenceScreen>
    <com.dof100.morsenotifier.MyPreferenceEditText android:title="@string/pref_string1" android:key="pref_chime_string1" android:summary="@string/pref_string1_summary" android:dependency="pref_chime_enable" android:inputType="textCapSentences" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" mypreferencenamespace:valueShow="true" mypreferencenamespace:valueUnits="" />
    <com.dof100.morsenotifier.MyPreferenceList android:entries="@array/pref_chime_timehow_items" android:title="@string/pref_chime_timehow_title" android:key="pref_chime_timehow" android:summary="@string/pref_chime_timehow_summary" android:dependency="pref_chime_enable" android:entryValues="@array/pref_chime_timehow_values" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" mypreferencenamespace:valueShow="true" mypreferencenamespace:valueUnits="" />
    <com.dof100.morsenotifier.MyPreferenceEditText android:title="@string/pref_string2" android:key="pref_chime_string2" android:summary="@string/pref_string2_summary" android:dependency="pref_chime_enable" android:inputType="textCapSentences" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" mypreferencenamespace:valueShow="true" mypreferencenamespace:valueUnits="" />
    <com.dof100.morsenotifier.MyPreferenceList android:entries="@array/pref_stream_items" android:title="@string/pref_stream_title" android:key="pref_chime_stream" android:summary="@string/pref_stream_summary" android:dependency="pref_chime_enable" android:entryValues="@array/pref_stream_values" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" mypreferencenamespace:valueShow="true" mypreferencenamespace:valueUnits="" />
    <com.dof100.morsenotifier.MyPreferenceButton android:key="pref_chime_test" android:dependency="pref_chime_enable" mypreferencenamespace:buttonCaption="@string/action_test" mypreferencenamespace:buttonIntentClass="com.dof100.morsenotifier.ServiceMain" mypreferencenamespace:buttonMsgExtraText1="" mypreferencenamespace:buttonMsgExtraText2="" mypreferencenamespace:buttonMsgWhat="@string/MSG_CHIME_TEST" mypreferencenamespace:enableFree="true" mypreferencenamespace:enablePro="true" />
</PreferenceScreen>